Fixed overflow issue on landing page modules in firefox

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -894,7 +894,7 @@ a.source, .resources{
 }
 
 .details .module{
-    width: 50%;
+    width: 45%;
     float: left;
     padding-right: 33px;
     -mozbox-sizing: border-box;
